crates/carina-tui/src/app/snapshots/carina_tui__app__render__transcript_tests__composer_chrome_zh_hans_running_80.snap
---
source: crates/carina-tui/src/app/render.rs
expression: rendered
---
size=80x2
⠋ 正在运行聚焦检查 0s  Esc 在安全点暂停
执行 正在运行
styles:
(0,0)..(39,0) (Rgb(142, 219, 210), Reset, NONE)
(0,1)..(13,1) (Rgb(142, 219, 210), Reset, NONE)
