crates/carina-tui/src/app/snapshots/carina_tui__app__render__transcript_tests__conversation_import_en_80.snap
---
source: crates/carina-tui/src/app/render.rs
expression: rendered
---
size=80x30

  Carina                                                Conversation recovery
  <workspace>
  ────────────────────────────────────────────────────────────────────────────

  ▌ Import conversations
    Local history · Claude Code + Codex · Current workspace

  ────────────────────────────────────────────────────────────────────────────
  ╭ Import conversations ────────────────────────────────────────────────────╮
  │                                                                          │
  │ Carina makes a local copy. Source files stay unchanged; later messages   │
  │ appear only after you check again.                                       │
  │ ▌ [x] Claude Code Review the bounded conversation parser  7 new          │
  │   [ ] Codex       Verify the imported audit chain  up to date            │
  │                                                                          │
  │                                                                          │
  │                                                                          │
  │                                                                          │
  │                                                                          │
  │                                                                          │
  │                                                                          │
  │                                                                          │
  │ Review import  Select all  Change source  Cancel                         │
  │                                                                          │
  │                                                                          │
  ╰──────────────────────────────────────────────────────────────────────────╯
   Space  Select or clear   Enter  Review import   Esc  Cancel
