crates/carina-tui/src/app/snapshots/carina_tui__app__render__transcript_tests__conversation_import_zh_hans_120.snap
---
source: crates/carina-tui/src/app/render.rs
expression: rendered
---
size=120x30

    ⠀⢀⣀⣀⡀⣠⣶⣶⣄⠀   Carina                                                                                     恢复会话
    ⠀⣿⣿⣿⣿⣿⣿⣿⣿⠀   服务商        服务商  ·  Direct API
    ⠀⠙⣿⣿⡏⠀⠈⢻⡇⠀   模型         model
    ⠀⢰⣿⣿⣿⣦⣴⣿⡿⠀   工作区        <workspace>
    ⠀⠈⠻⠿⠟⠁⠀⠀⠀⠀
   ──────────────────────────────────────────────────────────────────────────────────────────────────────────────────

   ▌ 导入会话
     本地历史 · Claude Code + Codex · 当前工作区

   ──────────────────────────────────────────────────────────────────────────────────────────────────────────────────
   ╭ 导入会话 ─────────────────────────────────────────────────────────────╮  ╭ 会话预览 ───────────────────────────╮
   │                                                                       │  │                                     │
   │ Carina                                                                │  │ Review the bounded conversation     │
   │ 会创建本地副本。源文件保持不变；以后新增的消息需要再次检查才会导入。  │  │ parser                              │
   │ ▌ [x] Claude Code Review the bounded conversation parser  7 条新增    │  │                                     │
   │   [ ] Codex       Verify the imported audit chain  已是最新           │  │ 服务商  Claude Code                 │
   │                                                                       │  │ 来源工作区  <workspace>             │
   │                                                                       │  │ 目标工作区  <workspace>             │
   │                                                                       │  │ 7 条可见的用户/助手消息             │
   │                                                                       │  │ 更新于 2026-08-13 16:01             │
   │                                                                       │  │                                     │
   │ 检查并导入  全选  切换来源  取消                                      │  │                                     │
   │                                                                       │  │                                     │
   │                                                                       │  │                                     │
   ╰───────────────────────────────────────────────────────────────────────╯  ╰─────────────────────────────────────╯
    Space  选择或取消   A  全选   S  切换来源   Tab  范围   Enter  检查并导入   Esc  取消
