crates/carina-tui/src/app/snapshots/carina_tui__app__render__transcript_tests__conversation_import_zh_hans_80.snap
---
source: crates/carina-tui/src/app/render.rs
expression: rendered
---
size=80x30

  Carina                                                             恢复会话
  <workspace>
  ────────────────────────────────────────────────────────────────────────────

  ▌ 导入会话
    本地历史 · Claude Code + Codex · 当前工作区

  ────────────────────────────────────────────────────────────────────────────
  ╭ 导入会话 ────────────────────────────────────────────────────────────────╮
  │                                                                          │
  │ Carina                                                                   │
  │ 会创建本地副本。源文件保持不变；以后新增的消息需要再次检查才会导入。     │
  │ ▌ [x] Claude Code Review the bounded conversation parser  7 条新增       │
  │   [ ] Codex       Verify the imported audit chain  已是最新              │
  │                                                                          │
  │                                                                          │
  │                                                                          │
  │                                                                          │
  │                                                                          │
  │                                                                          │
  │                                                                          │
  │                                                                          │
  │ 检查并导入  全选  切换来源  取消                                         │
  │                                                                          │
  │                                                                          │
  ╰──────────────────────────────────────────────────────────────────────────╯
   Space  选择或取消   Enter  检查并导入   Esc  取消
