crates/carina-tui/src/app/snapshots/carina_tui__app__render__transcript_tests__fullscreen_patch_review_en_120.snap
---
source: crates/carina-tui/src/app/render.rs
expression: rendered
---
size=120x34

   ╭ Changes workbench ─────────────────────────────────────────────────────────────────────────────────────────────╮
   │ patch-authz-boundary-0184  ·  Accepted  +8  -2  3 files                                                        │
   │ Transaction  tx-workspace-0184  ·  Actor  carina/patch-agent  ·  Verification  Passed                          │
   │                                                                                                                │
   │   Transaction        │ ▌ Workspace files               │   …/carina-kernel/src/runtime/patch.rs  +2 -1  1/1 @@ │
   │ ▌ Accepted  …-0184   │ ▌ M …/patch.rs      +2 -1 1/1@@ │ @@ -41,5 +41,7 @@ pub fn authorize_patch(request: Req │
   │   Pending  …-0185    │ │ A …/review.rs     +4 -0 1/1@@ │     |     -     policy.check(request.capability)      │
   │                      │ │ M …-review.md     +2 -1 0/1@@ │     |  41 +     policy.check(request.capability, requ │
   │                      │                                 │     |  42 +         .with_transaction(request.transac │
   │                      │                                 │     |  43   }                                         │
   │                      │                                 │                                                       │
   │                      │                                 │                                                       │
   │                      │                                 │                                                       │
   │                      │                                 │                                                       │
   │                      │                                 │                                                       │
   │                      │                                 │                                                       │
   │                      │                                 │                                                       │
   │                      │                                 │                                                       │
   │                      │                                 │                                                       │
   │                      │                                 │                                                       │
   │                      │                                 │                                                       │
   │                      │                                 │                                                       │
   │                      │                                 │                                                       │
   │                      │                                 │                                                       │
   │                      │                                 │                                                       │
   │                      │                                 │                                                       │
   │                      │                                 │                                                       │
   │                      │                                 │                                                       │
   │                      │                                 │                                                       │
   │  Tab  Navigate   B  Rollback   R  Refresh   Esc  Close                                                         │
   │                                                                                                                │
   ╰────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
styles:
(3,1)..(117,1) (Rgb(52, 65, 68), Reset, NONE)
(3,2)..(4,2) (Rgb(52, 65, 68), Reset, NONE)
(5,2)..(30,2) (Reset, Reset, BOLD)
(30,2)..(35,2) (Rgb(150, 160, 156), Reset, NONE)
(35,2)..(43,2) (Rgb(142, 219, 210), Reset, BOLD)
(43,2)..(60,2) (Rgb(150, 160, 156), Reset, NONE)
(116,2)..(117,2) (Rgb(52, 65, 68), Reset, NONE)
(3,3)..(4,3) (Rgb(52, 65, 68), Reset, NONE)
(5,3)..(18,3) (Rgb(150, 160, 156), Reset, NONE)
(35,3)..(47,3) (Rgb(150, 160, 156), Reset, NONE)
(65,3)..(84,3) (Rgb(150, 160, 156), Reset, NONE)
(116,3)..(117,3) (Rgb(52, 65, 68), Reset, NONE)
(3,4)..(4,4) (Rgb(52, 65, 68), Reset, NONE)
(116,4)..(117,4) (Rgb(52, 65, 68), Reset, NONE)
(3,5)..(4,5) (Rgb(52, 65, 68), Reset, NONE)
(5,5)..(26,5) (Rgb(150, 160, 156), Reset, BOLD)
(26,5)..(27,5) (Rgb(52, 65, 68), Reset, NONE)
(28,5)..(60,5) (Rgb(142, 219, 210), Reset, BOLD)
(60,5)..(61,5) (Rgb(52, 65, 68), Reset, NONE)
(62,5)..(115,5) (Rgb(150, 160, 156), Reset, BOLD)
(116,5)..(117,5) (Rgb(52, 65, 68), Reset, NONE)
(3,6)..(4,6) (Rgb(52, 65, 68), Reset, NONE)
(5,6)..(26,6) (Reset, Reset, BOLD)
(26,6)..(27,6) (Rgb(52, 65, 68), Reset, NONE)
(28,6)..(32,6) (Rgb(150, 160, 156), Rgb(36, 61, 62), BOLD)
(32,6)..(48,6) (Reset, Rgb(36, 61, 62), BOLD)
(48,6)..(50,6) (Rgb(142, 219, 210), Rgb(36, 61, 62), BOLD)
(50,6)..(51,6) (Reset, Rgb(36, 61, 62), BOLD)
(51,6)..(53,6) (Rgb(255, 124, 120), Rgb(36, 61, 62), BOLD)
(53,6)..(59,6) (Rgb(90, 101, 99), Rgb(36, 61, 62), BOLD)
(59,6)..(60,6) (Reset, Rgb(36, 61, 62), BOLD)
(60,6)..(61,6) (Rgb(52, 65, 68), Reset, NONE)
(62,6)..(115,6) (Rgb(90, 101, 99), Reset, NONE)
(116,6)..(117,6) (Rgb(52, 65, 68), Reset, NONE)
(3,7)..(4,7) (Rgb(52, 65, 68), Reset, NONE)
(26,7)..(27,7) (Rgb(52, 65, 68), Reset, NONE)
(28,7)..(32,7) (Rgb(150, 160, 156), Reset, NONE)
(48,7)..(50,7) (Rgb(142, 219, 210), Reset, NONE)
(51,7)..(53,7) (Rgb(255, 124, 120), Reset, NONE)
(53,7)..(59,7) (Rgb(90, 101, 99), Reset, NONE)
(60,7)..(61,7) (Rgb(52, 65, 68), Reset, NONE)
(62,7)..(72,7) (Rgb(90, 101, 99), Reset, NONE)
(72,7)..(110,7) (Rgb(255, 124, 120), Reset, NONE)
(116,7)..(117,7) (Rgb(52, 65, 68), Reset, NONE)
(3,8)..(4,8) (Rgb(52, 65, 68), Reset, NONE)
(26,8)..(27,8) (Rgb(52, 65, 68), Reset, NONE)
(28,8)..(32,8) (Rgb(150, 160, 156), Reset, NONE)
(48,8)..(50,8) (Rgb(142, 219, 210), Reset, NONE)
(51,8)..(53,8) (Rgb(255, 124, 120), Reset, NONE)
(53,8)..(59,8) (Rgb(90, 101, 99), Reset, NONE)
(60,8)..(61,8) (Rgb(52, 65, 68), Reset, NONE)
(62,8)..(72,8) (Rgb(90, 101, 99), Reset, NONE)
(72,8)..(109,8) (Rgb(142, 219, 210), Reset, NONE)
(109,8)..(115,8) (Rgb(142, 219, 210), Reset, BOLD | UNDERLINED)
(116,8)..(117,8) (Rgb(52, 65, 68), Reset, NONE)
(3,9)..(4,9) (Rgb(52, 65, 68), Reset, NONE)
(26,9)..(27,9) (Rgb(52, 65, 68), Reset, NONE)
(60,9)..(61,9) (Rgb(52, 65, 68), Reset, NONE)
(62,9)..(72,9) (Rgb(90, 101, 99), Reset, NONE)
(72,9)..(115,9) (Rgb(142, 219, 210), Reset, NONE)
(116,9)..(117,9) (Rgb(52, 65, 68), Reset, NONE)
(3,10)..(4,10) (Rgb(52, 65, 68), Reset, NONE)
(26,10)..(27,10) (Rgb(52, 65, 68), Reset, NONE)
(60,10)..(61,10) (Rgb(52, 65, 68), Reset, NONE)
(62,10)..(72,10) (Rgb(90, 101, 99), Reset, NONE)
(116,10)..(117,10) (Rgb(52, 65, 68), Reset, NONE)
(3,11)..(4,11) (Rgb(52, 65, 68), Reset, NONE)
(26,11)..(27,11) (Rgb(52, 65, 68), Reset, NONE)
(60,11)..(61,11) (Rgb(52, 65, 68), Reset, NONE)
(116,11)..(117,11) (Rgb(52, 65, 68), Reset, NONE)
(3,12)..(4,12) (Rgb(52, 65, 68), Reset, NONE)
(26,12)..(27,12) (Rgb(52, 65, 68), Reset, NONE)
(60,12)..(61,12) (Rgb(52, 65, 68), Reset, NONE)
(116,12)..(117,12) (Rgb(52, 65, 68), Reset, NONE)
(3,13)..(4,13) (Rgb(52, 65, 68), Reset, NONE)
(26,13)..(27,13) (Rgb(52, 65, 68), Reset, NONE)
(60,13)..(61,13) (Rgb(52, 65, 68), Reset, NONE)
(116,13)..(117,13) (Rgb(52, 65, 68), Reset, NONE)
(3,14)..(4,14) (Rgb(52, 65, 68), Reset, NONE)
(26,14)..(27,14) (Rgb(52, 65, 68), Reset, NONE)
(60,14)..(61,14) (Rgb(52, 65, 68), Reset, NONE)
(116,14)..(117,14) (Rgb(52, 65, 68), Reset, NONE)
(3,15)..(4,15) (Rgb(52, 65, 68), Reset, NONE)
(26,15)..(27,15) (Rgb(52, 65, 68), Reset, NONE)
(60,15)..(61,15) (Rgb(52, 65, 68), Reset, NONE)
(116,15)..(117,15) (Rgb(52, 65, 68), Reset, NONE)
(3,16)..(4,16) (Rgb(52, 65, 68), Reset, NONE)
(26,16)..(27,16) (Rgb(52, 65, 68), Reset, NONE)
(60,16)..(61,16) (Rgb(52, 65, 68), Reset, NONE)
(116,16)..(117,16) (Rgb(52, 65, 68), Reset, NONE)
(3,17)..(4,17) (Rgb(52, 65, 68), Reset, NONE)
(26,17)..(27,17) (Rgb(52, 65, 68), Reset, NONE)
(60,17)..(61,17) (Rgb(52, 65, 68), Reset, NONE)
(116,17)..(117,17) (Rgb(52, 65, 68), Reset, NONE)
(3,18)..(4,18) (Rgb(52, 65, 68), Reset, NONE)
(26,18)..(27,18) (Rgb(52, 65, 68), Reset, NONE)
(60,18)..(61,18) (Rgb(52, 65, 68), Reset, NONE)
(116,18)..(117,18) (Rgb(52, 65, 68), Reset, NONE)
(3,19)..(4,19) (Rgb(52, 65, 68), Reset, NONE)
(26,19)..(27,19) (Rgb(52, 65, 68), Reset, NONE)
(60,19)..(61,19) (Rgb(52, 65, 68), Reset, NONE)
(116,19)..(117,19) (Rgb(52, 65, 68), Reset, NONE)
(3,20)..(4,20) (Rgb(52, 65, 68), Reset, NONE)
(26,20)..(27,20) (Rgb(52, 65, 68), Reset, NONE)
(60,20)..(61,20) (Rgb(52, 65, 68), Reset, NONE)
(116,20)..(117,20) (Rgb(52, 65, 68), Reset, NONE)
(3,21)..(4,21) (Rgb(52, 65, 68), Reset, NONE)
(26,21)..(27,21) (Rgb(52, 65, 68), Reset, NONE)
(60,21)..(61,21) (Rgb(52, 65, 68), Reset, NONE)
(116,21)..(117,21) (Rgb(52, 65, 68), Reset, NONE)
(3,22)..(4,22) (Rgb(52, 65, 68), Reset, NONE)
(26,22)..(27,22) (Rgb(52, 65, 68), Reset, NONE)
(60,22)..(61,22) (Rgb(52, 65, 68), Reset, NONE)
(116,22)..(117,22) (Rgb(52, 65, 68), Reset, NONE)
(3,23)..(4,23) (Rgb(52, 65, 68), Reset, NONE)
(26,23)..(27,23) (Rgb(52, 65, 68), Reset, NONE)
(60,23)..(61,23) (Rgb(52, 65, 68), Reset, NONE)
(116,23)..(117,23) (Rgb(52, 65, 68), Reset, NONE)
(3,24)..(4,24) (Rgb(52, 65, 68), Reset, NONE)
(26,24)..(27,24) (Rgb(52, 65, 68), Reset, NONE)
(60,24)..(61,24) (Rgb(52, 65, 68), Reset, NONE)
(116,24)..(117,24) (Rgb(52, 65, 68), Reset, NONE)
(3,25)..(4,25) (Rgb(52, 65, 68), Reset, NONE)
(26,25)..(27,25) (Rgb(52, 65, 68), Reset, NONE)
(60,25)..(61,25) (Rgb(52, 65, 68), Reset, NONE)
(116,25)..(117,25) (Rgb(52, 65, 68), Reset, NONE)
(3,26)..(4,26) (Rgb(52, 65, 68), Reset, NONE)
(26,26)..(27,26) (Rgb(52, 65, 68), Reset, NONE)
(60,26)..(61,26) (Rgb(52, 65, 68), Reset, NONE)
(116,26)..(117,26) (Rgb(52, 65, 68), Reset, NONE)
(3,27)..(4,27) (Rgb(52, 65, 68), Reset, NONE)
(26,27)..(27,27) (Rgb(52, 65, 68), Reset, NONE)
(60,27)..(61,27) (Rgb(52, 65, 68), Reset, NONE)
(116,27)..(117,27) (Rgb(52, 65, 68), Reset, NONE)
(3,28)..(4,28) (Rgb(52, 65, 68), Reset, NONE)
(26,28)..(27,28) (Rgb(52, 65, 68), Reset, NONE)
(60,28)..(61,28) (Rgb(52, 65, 68), Reset, NONE)
(116,28)..(117,28) (Rgb(52, 65, 68), Reset, NONE)
(3,29)..(4,29) (Rgb(52, 65, 68), Reset, NONE)
(26,29)..(27,29) (Rgb(52, 65, 68), Reset, NONE)
(60,29)..(61,29) (Rgb(52, 65, 68), Reset, NONE)
(116,29)..(117,29) (Rgb(52, 65, 68), Reset, NONE)
(3,30)..(4,30) (Rgb(52, 65, 68), Reset, NONE)
(5,30)..(10,30) (Rgb(142, 219, 210), Reset, BOLD)
(10,30)..(21,30) (Rgb(150, 160, 156), Reset, NONE)
(21,30)..(24,30) (Rgb(142, 219, 210), Reset, BOLD)
(24,30)..(35,30) (Rgb(150, 160, 156), Reset, NONE)
(35,30)..(38,30) (Rgb(142, 219, 210), Reset, BOLD)
(38,30)..(48,30) (Rgb(150, 160, 156), Reset, NONE)
(48,30)..(53,30) (Rgb(142, 219, 210), Reset, BOLD)
(53,30)..(61,30) (Rgb(150, 160, 156), Reset, NONE)
(116,30)..(117,30) (Rgb(52, 65, 68), Reset, NONE)
(3,31)..(4,31) (Rgb(52, 65, 68), Reset, NONE)
(116,31)..(117,31) (Rgb(52, 65, 68), Reset, NONE)
(3,32)..(117,32) (Rgb(52, 65, 68), Reset, NONE)
